--- a/src/scss/Utils/_variables.scss
+++ b/src/scss/Utils/_variables.scss
@@ -1,8 +1,12 @@
 // sizes
-$footer-height: 20rem;
+$footer-height: 22rem;
 
 // text
 $nav-text: 1.6rem;
+$title-text-size: 3rem;
+$sub-title-text-size: 3rem;
+
+$title-font: 0;
 
 // colors
 $main-text-color: white;
