--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,3 +1,8 @@
+@media screen and (min-width: 1600px) {
+  .container {
+    max-width: 2048px !important;
+    margin: 0 10% !important; } }
+
 *,
 *::after,
 *::before {
@@ -32,6 +37,9 @@ ol li {
 
 li {
   text-decoration: none; }
+
+.hover:hover {
+  cursor: pointer; }
 
 .navigation {
   position: fixed;
@@ -76,11 +84,11 @@ li {
 
 .layout {
   padding-top: 6rem;
-  min-height: calc(100vh - 20rem);
-  margin-bottom: -20rem; }
+  min-height: calc(100vh - 22rem);
+  margin-bottom: -22rem; }
 
 .push {
-  height: 20rem; }
+  height: 22rem; }
 
 .search {
   background: white;
@@ -89,7 +97,8 @@ li {
   height: 10rem;
   left: 20%;
   width: 60%;
-  border: 0.1rem solid black; }
+  border: 0.1rem solid black;
+  z-index: 100; }
   .search input[type='text'] {
     font-size: 1.5rem;
     margin-top: 3.5rem;
@@ -113,8 +122,286 @@ li {
   background: black;
   bottom: 0;
   width: 100%;
-  height: 20rem;
-  color: white; }
-  .footer-social-icons {
-    color: white;
-    font-size: 5rem; }
+  height: 22rem;
+  color: white;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 33% 33% 33%;
+      grid-template-columns: 33% 33% 33%;
+  padding-top: 2rem; }
+  .footer a {
+    color: white; }
+  .footer-section-1 {
+    margin-left: 20rem;
+    text-align: center;
+    color: white !important; }
+    .footer-section-1-logo-main {
+      font-size: 2rem; }
+    .footer-section-1-social-icons {
+      z-index: 2;
+      color: white;
+      font-size: 5rem; }
+  .footer-section-2 {
+    width: 100%;
+    text-align: left;
+    display: -ms-grid;
+    display: grid;
+    grid-gap: 1rem;
+    -ms-grid-columns: 1fr 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr 1fr 1fr; }
+    .footer-section-2-title {
+      font-size: 1.2rem;
+      padding: 1.5rem 0 2rem 0; }
+    .footer-section-2-link {
+      font-size: 1.2rem; }
+  .footer-section-3-title {
+    font-size: 2.5rem; }
+  .footer-section-3-subtitle {
+    width: 30rem;
+    font-size: 1.2rem; }
+  .footer-section-3-form input[type='text'] {
+    padding: 0.8rem;
+    border-radius: 0.5rem;
+    font-size: 1.5rem;
+    margin-top: 1.5rem;
+    width: 20rem;
+    background: transparent;
+    color: white; }
+  .footer-section-3-form-subscribe-button {
+    background: white;
+    color: black;
+    padding: 1.2rem;
+    border-radius: 0.5rem;
+    font-size: 1.1rem;
+    margin-left: 2rem;
+    width: 11rem; }
+
+.JoinPictureBtn {
+  -webkit-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
+  margin-bottom: 10rem; }
+  .JoinPictureBtn-img {
+    width: 45rem;
+    margin-bottom: 20rem; }
+  .JoinPictureBtn-btn {
+    margin-left: 12rem;
+    color: black;
+    background: white;
+    border: 0.1rem solid black;
+    margin-top: 1rem;
+    border-radius: 0.5rem;
+    font-size: 1.5rem;
+    text-decoration: none;
+    padding: 0.8rem 4rem; }
+    .JoinPictureBtn-btn:hover {
+      cursor: pointer;
+      -webkit-transform: scale(1.05);
+              transform: scale(1.05); }
+    .JoinPictureBtn-btn:active {
+      -webkit-transform: translateY(0.2rem);
+              transform: translateY(0.2rem);
+      -webkit-box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
+              box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2); }
+
+.homePage .line {
+  width: 100%;
+  height: 0.1rem;
+  background: black; }
+
+.homePage-section-1 {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr; }
+  .homePage-section-1-right-text {
+    margin-top: 5rem;
+    text-align: center;
+    width: 60%;
+    font-size: 3rem; }
+  .homePage-section-1-right-btns {
+    -webkit-transition: all 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out;
+    margin-top: 45rem;
+    margin-right: 10rem;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex; }
+    .homePage-section-1-right-btns-men {
+      margin-right: 3rem;
+      color: black;
+      background: white;
+      border: 0.1rem solid black;
+      margin-top: 1rem;
+      border-radius: 0.5rem;
+      font-size: 1.5rem;
+      text-decoration: none;
+      padding: 0.8rem 4rem; }
+      .homePage-section-1-right-btns-men:hover {
+        cursor: pointer;
+        -webkit-transform: scale(1.05);
+                transform: scale(1.05); }
+      .homePage-section-1-right-btns-men:active {
+        -webkit-transform: translateY(0.2rem);
+                transform: translateY(0.2rem);
+        -webkit-box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
+                box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2); }
+    .homePage-section-1-right-btns-women {
+      color: white;
+      background: black;
+      margin-top: 1rem;
+      border-radius: 0.5rem;
+      font-size: 1.5rem;
+      text-decoration: none;
+      padding: 0.8rem 4rem; }
+      .homePage-section-1-right-btns-women:hover {
+        cursor: pointer;
+        -webkit-transform: scale(1.05);
+                transform: scale(1.05); }
+      .homePage-section-1-right-btns-women:active {
+        -webkit-transform: translateY(0.2rem);
+                transform: translateY(0.2rem);
+        -webkit-box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
+                box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2); }
+  .homePage-section-1-left {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center; }
+    .homePage-section-1-left-img {
+      width: 35rem; }
+
+.homePage-section-2 {
+  text-align: center; }
+  .homePage-section-2-title {
+    font-size: 3.5rem;
+    margin-top: 5rem; }
+  .homePage-section-2-img {
+    width: 20rem; }
+
+.homePage-section-3 {
+  text-align: center; }
+  .homePage-section-3-title {
+    font-size: 3.5rem;
+    margin-top: 5rem;
+    margin-left: calc(100% - 50rem); }
+  .homePage-section-3-grid {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr; }
+    .homePage-section-3-grid-right-btns {
+      margin: 10rem 0 3rem 0;
+      -webkit-transition: all 0.5s ease-in-out;
+      transition: all 0.5s ease-in-out;
+      -webkit-box-pack: center;
+          -ms-flex-pack: center;
+              justify-content: center;
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex; }
+      .homePage-section-3-grid-right-btns-men {
+        margin-right: 3rem;
+        color: black;
+        background: white;
+        border: 0.1rem solid black;
+        margin-top: 1rem;
+        border-radius: 0.5rem;
+        font-size: 1.5rem;
+        text-decoration: none;
+        padding: 0.8rem 4rem; }
+        .homePage-section-3-grid-right-btns-men:hover {
+          cursor: pointer;
+          -webkit-transform: scale(1.05);
+                  transform: scale(1.05); }
+        .homePage-section-3-grid-right-btns-men:active {
+          -webkit-transform: translateY(0.2rem);
+                  transform: translateY(0.2rem);
+          -webkit-box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
+                  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2); }
+      .homePage-section-3-grid-right-btns-women {
+        color: white;
+        background: black;
+        margin-top: 1rem;
+        border-radius: 0.5rem;
+        font-size: 1.5rem;
+        text-decoration: none;
+        padding: 0.8rem 4rem; }
+        .homePage-section-3-grid-right-btns-women:hover {
+          cursor: pointer;
+          -webkit-transform: scale(1.05);
+                  transform: scale(1.05); }
+        .homePage-section-3-grid-right-btns-women:active {
+          -webkit-transform: translateY(0.2rem);
+                  transform: translateY(0.2rem);
+          -webkit-box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
+                  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2); }
+    .homePage-section-3-grid-left {
+      margin: 10rem 0 6rem 0; }
+
+.homePage-section-4 {
+  text-align: center; }
+  .homePage-section-4-title {
+    font-size: 3.5rem;
+    margin: 5rem 0 5rem 10rem;
+    text-align: left; }
+  .homePage-section-4-grid {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr; }
+    .homePage-section-4-grid-left {
+      margin-top: -10rem; }
+      .homePage-section-4-grid-left-btns {
+        -webkit-transition: all 0.5s ease-in-out;
+        transition: all 0.5s ease-in-out;
+        margin: 0 10rem 4rem 0;
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex; }
+        .homePage-section-4-grid-left-btns-men {
+          margin-right: 3rem;
+          color: black;
+          background: white;
+          border: 0.1rem solid black;
+          margin-top: 1rem;
+          border-radius: 0.5rem;
+          font-size: 1.5rem;
+          text-decoration: none;
+          padding: 0.8rem 4rem; }
+          .homePage-section-4-grid-left-btns-men:hover {
+            cursor: pointer;
+            -webkit-transform: scale(1.05);
+                    transform: scale(1.05); }
+          .homePage-section-4-grid-left-btns-men:active {
+            -webkit-transform: translateY(0.2rem);
+                    transform: translateY(0.2rem);
+            -webkit-box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
+                    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2); }
+        .homePage-section-4-grid-left-btns-women {
+          color: white;
+          background: black;
+          margin-top: 1rem;
+          border-radius: 0.5rem;
+          font-size: 1.5rem;
+          text-decoration: none;
+          padding: 0.8rem 4rem; }
+          .homePage-section-4-grid-left-btns-women:hover {
+            cursor: pointer;
+            -webkit-transform: scale(1.05);
+                    transform: scale(1.05); }
+          .homePage-section-4-grid-left-btns-women:active {
+            -webkit-transform: translateY(0.2rem);
+                    transform: translateY(0.2rem);
+            -webkit-box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
+                    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2); }
