--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -15,6 +15,8 @@
 @import './Components/search';
 @import './Components/footer';
 @import './Components/joinPictureBtn';
+@import './Components/cart';
+@import './Components/checkout';
 
 // Importing Pages
 @import './Pages/home';
