--- a/src/css/main.css
+++ b/src/css/main.css
@@ -287,6 +287,193 @@ li {
     -webkit-box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
             box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2); }
 
+.signin-btn {
+  color: white;
+  background: black;
+  margin-top: 1rem;
+  border-radius: 0.5rem;
+  font-size: 1.5rem;
+  text-decoration: none;
+  padding: 0.8rem 4rem;
+  -webkit-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
+  border: none;
+  width: 25rem; }
+  .signin-btn:hover {
+    cursor: pointer;
+    -webkit-transform: scale(1.05);
+            transform: scale(1.05); }
+  .signin-btn:active {
+    -webkit-transform: translateY(0.2rem);
+            transform: translateY(0.2rem);
+    -webkit-box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
+            box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2); }
+
+.signin-form {
+  text-align: center;
+  margin: 3rem 0 3rem 0; }
+  .signin-form input[type='text'] {
+    font-size: 1.5rem;
+    padding: 0.5rem;
+    border-radius: 0.4rem;
+    border: 0.2rem solid black;
+    margin-bottom: 2rem;
+    width: 25%; }
+  .signin-form input[type='password'] {
+    font-size: 1.5rem;
+    padding: 0.5rem;
+    border-radius: 0.4rem;
+    border: 0.2rem solid black;
+    margin-bottom: 2rem;
+    width: 25%; }
+  .signin-form-submit-btn {
+    color: black;
+    background: white;
+    border: 0.1rem solid black;
+    margin-top: 1rem;
+    border-radius: 0.5rem;
+    font-size: 1.5rem;
+    text-decoration: none;
+    padding: 0.8rem 4rem;
+    -webkit-transition: all 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out;
+    width: 20rem; }
+    .signin-form-submit-btn:hover {
+      cursor: pointer;
+      -webkit-transform: scale(1.05);
+              transform: scale(1.05); }
+    .signin-form-submit-btn:active {
+      -webkit-transform: translateY(0.2rem);
+              transform: translateY(0.2rem);
+      -webkit-box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
+              box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2); }
+
+.passwordForgetLink {
+  text-decoration: none;
+  color: black;
+  font-size: 1.5rem; }
+  .passwordForgetLink:hover {
+    cursor: pointer; }
+
+.passwordForgetForm {
+  text-align: center;
+  margin: 3rem 0 3rem 0; }
+  .passwordForgetForm input[type='text'] {
+    font-size: 1.5rem;
+    padding: 0.5rem;
+    border-radius: 0.4rem;
+    border: 0.2rem solid black;
+    margin-bottom: 2rem;
+    width: 25%; }
+  .passwordForgetForm-submit-btn {
+    color: black;
+    background: white;
+    border: 0.1rem solid black;
+    margin-top: 1rem;
+    border-radius: 0.5rem;
+    font-size: 1.5rem;
+    text-decoration: none;
+    padding: 0.8rem 4rem;
+    margin-left: calc(50% - 12.5rem);
+    -webkit-transition: all 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out;
+    width: 25rem; }
+    .passwordForgetForm-submit-btn:hover {
+      cursor: pointer;
+      -webkit-transform: scale(1.05);
+              transform: scale(1.05); }
+    .passwordForgetForm-submit-btn:active {
+      -webkit-transform: translateY(0.2rem);
+              transform: translateY(0.2rem);
+      -webkit-box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
+              box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2); }
+
+.signUp {
+  margin: 3rem 0 3rem 0; }
+  .signUp input[type='text'] {
+    font-size: 1.5rem;
+    padding: 0.5rem;
+    border-radius: 0.4rem;
+    border: 0.2rem solid black;
+    margin-bottom: 2rem;
+    width: 25%;
+    margin-bottom: 3.5rem; }
+  .signUp input[type='password'] {
+    font-size: 1.5rem;
+    padding: 0.5rem;
+    border-radius: 0.4rem;
+    border: 0.2rem solid black;
+    margin-bottom: 2rem;
+    width: 25%;
+    margin-bottom: 3.5rem; }
+  .signUp-submit-btn {
+    color: black;
+    background: white;
+    border: 0.1rem solid black;
+    margin-top: 1rem;
+    border-radius: 0.5rem;
+    font-size: 1.5rem;
+    text-decoration: none;
+    padding: 0.8rem 4rem;
+    -webkit-transition: all 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out;
+    width: 20rem; }
+    .signUp-submit-btn:hover {
+      cursor: pointer;
+      -webkit-transform: scale(1.05);
+              transform: scale(1.05); }
+    .signUp-submit-btn:active {
+      -webkit-transform: translateY(0.2rem);
+              transform: translateY(0.2rem);
+      -webkit-box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
+              box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2); }
+
+.SideTab {
+  height: 50rem; }
+  .SideTab .Tabs {
+    height: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex; }
+  .SideTab .TabList {
+    width: 10rem; }
+  .SideTab .TabPanel {
+    -webkit-box-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
+    display: none;
+    padding: 1.5rem 2rem; }
+  .SideTab .TabPanel.is-active {
+    display: block; }
+  .SideTab .Button {
+    display: inline-block;
+    width: 18rem;
+    padding: 0.5rem 2rem;
+    background: none;
+    border: none;
+    cursor: pointer;
+    font-size: 1.2rem;
+    color: black;
+    margin: 1rem 0 1rem 0; }
+  .SideTab .Button:focus,
+  .SideTab .Button:hover {
+    outline: 0;
+    font-weight: bold; }
+  .SideTab .Tab.is-active .Button {
+    font-weight: bold;
+    border-radius: 1rem;
+    border: solid 0.1rem black; }
+  .SideTab .v-line {
+    margin-left: 10rem;
+    width: 0.1rem;
+    height: 30rem;
+    background: gray; }
+  .SideTab .line {
+    height: 0.1rem;
+    margin-left: 3rem;
+    width: 12rem;
+    background: gray; }
+
 .homePage .line {
   width: 100%;
   height: 0.1rem;
@@ -489,3 +676,20 @@ li {
                     transform: translateY(0.2rem);
             -webkit-box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
                     box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2); }
+
+.loggedOut {
+  text-align: center;
+  font-size: 3rem;
+  margin-top: 30rem; }
+
+.signIn {
+  text-align: center; }
+  .signIn h1 {
+    margin-top: 5rem;
+    font-size: 3rem; }
+
+.passwordForgetPage {
+  text-align: center; }
+  .passwordForgetPage h1 {
+    margin-top: 5rem;
+    font-size: 3rem; }
