--- a/src/scss/Utils/_mixins.scss
+++ b/src/scss/Utils/_mixins.scss
@@ -73,3 +73,12 @@
   transform: translateY(0.2rem);
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
 }
+
+@mixin inputBox {
+  font-size: 1.5rem;
+  padding: 0.5rem;
+  border-radius: 0.4rem;
+  border: 0.2rem solid black;
+  margin-bottom: 2rem;
+  width: 25%;
+}
