--- a/src/scss/Components/_sideTabBar.scss
+++ b/src/scss/Components/_sideTabBar.scss
@@ -44,15 +44,11 @@
 
   .v-line {
     margin-left: 10rem;
-    width: 0.1rem;
-    height: 30rem;
-    background: $gray;
+    @include v-line(30rem);
   }
 
   .line {
-    height: 0.1rem;
     margin-left: 3rem;
-    width: 12rem;
-    background: $gray;
+    @include line(12rem);
   }
 }
