--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -24,6 +24,7 @@
 @import './Components/signOut';
 @import './Components/AccountContent';
 @import './Components/PasswordChangeForm';
+@import './Components/Modals';
 
 // Importing Pages;
 @import './Pages/home';
