--- a/src/scss/Components/_navigations.scss
+++ b/src/scss/Components/_navigations.scss
@@ -1,5 +1,4 @@
 .navigation {
-  position: fixed;
   z-index: 2;
   display: block;
   width: 100%;
@@ -24,25 +23,38 @@
 
   &-left {
     padding-left: 4%;
+
+    &-modal {
+      position: absolute;
+      left: 17%;
+      top: 25%;
+      &:hover {
+        cursor: pointer;
+      }
+    }
   }
 
   &-center {
     position: absolute;
     left: 48%;
+    top: 25%;
   }
 
   &-right {
     &-first {
       position: absolute;
       right: 12%;
+      top: 25%;
     }
     &-second {
       position: absolute;
       right: 8%;
+      top: 25%;
     }
     &-third {
       position: absolute;
       right: 4%;
+      top: 25%;
     }
     &-icons {
       margin-left: 4%;
