--- a/src/scss/Components/_search.scss
+++ b/src/scss/Components/_search.scss
@@ -1,7 +1,7 @@
 .search {
   background: white;
   position: fixed;
-  top: calc(6rem - 0.1rem);
+  top: $nav-height;
   height: 10rem;
   left: 20%;
   width: 60%;
